<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="doneroapp.globulaertech.com.doneroapplication.activities.SignUpScreen">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_window">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background_window"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableLeft="@drawable/shero"
                android:fadingEdge="horizontal|vertical"
                android:focusable="true"
                android:fontFamily="cursive"
                android:gravity="center"
                android:text="@string/title_signup"
                android:textColor="#000000"
                android:textSize="50dp"
                android:textStyle="bold"
                android:typeface="monospace" />

            <TextView
                android:textColor="#000000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/title_mini"
                android:textSize="17dp"
                android:textStyle="bold"
                android:typeface="serif" />

            <android.support.v7.widget.CardView
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="30dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:orientation="horizontal">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="25dp"
                        android:layout_marginRight="25dp"
                        android:layout_marginTop="30dp">

                        <EditText
                            android:id="@+id/doneroname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawablePadding="5dp"
                            android:hint="@string/name"
                            android:inputType="text"
                            android:textColor="#000000"
                            android:textColorHint="#ffffff"
                            android:textSize="15dp" />
                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="25dp"
                        android:layout_marginRight="25dp"
                        android:layout_marginTop="90dp">

                        <EditText
                            android:id="@+id/doneroPhone_no"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawablePadding="5dp"
                            android:hint="@string/mobile"
                            android:inputType="phone"
                            android:maxLength="10"
                            android:textColor="#000000"
                            android:textSize="15dp" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="25dp"
                        android:layout_marginRight="25dp"
                        android:layout_marginTop="150dp">

                        <EditText
                            android:id="@+id/donero_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawablePadding="5dp"
                            android:hint="@string/email"
                            android:inputType="text"
                            android:textColor="#000000"
                            android:textSize="15dp" />
                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/newUser_Register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="24dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginTop="20dp"
                    android:background="@color/colorPrimaryDark"
                    android:clickable="true"
                    android:padding="12dp"
                    android:text="SignUp"
                    android:textColor="#ffffff" />

            </android.support.v7.widget.CardView>

<!--            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:orientation="horizontal">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:background="#ffffff"></View>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="OR"
                    android:textColor="#ffffff" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:background="#ffffff"></View>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="Sign in with existing account"
                android:textColor="#ffffff"
                android:textSize="13dp"
                android:typeface="serif" />-->

<!--            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/face" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/googleplus" />
            </LinearLayout>-->
        </LinearLayout>
    </ScrollView></RelativeLayout>
